# RayTracer

./: .gitignore  CMakeLists.txt
src/: color.h  main.cc  ray.h  vec3.h
